--- a/styles/layout.css
+++ b/styles/layout.css
@@ -20,6 +20,8 @@
     --gray-d: #dddddd;
     --gray-light: #f0f0f0;
     --blue: #0060EE; 
+    --azulCiano: #e0edf3;
+    --yellow: yellow;
     --purple: rgb(116, 116, 235);
     --orange: #faa032;
     --brown: rgb(165, 32, 32);
