--- a/styles/layout.css
+++ b/styles/layout.css
@@ -53,7 +53,7 @@ body {
 @media print {
     @page {
         margin: 0.5cm;
-        size: landscape;
+        size: A4 landscape;
     }
     
     body {
@@ -388,7 +388,7 @@ div.linha.do-rodape {
 }
 
 div.linha.do-rodape div.hiperligacoes {
-    margin-right: 4%;
+    margin: 0 4% 0 20px;
 }
 
 div.linha.do-rodape div.hiperligacoes h4 {
